--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,133 @@ ol, ul {
     margin: 0;
     padding: 0;
 }
+
+/* ##### */
+
+header{
+    padding: 70px 0px 0px;
+}
+
+.header-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    background-color: white;
+    border-bottom: 2px solid #bababa;
+
+}
+
+
+nav{
+    /* max-width: 1285px; */
+    display: flex;
+    justify-content: space-between;
+    /* margin: 0 auto; */
+    margin: 30px auto 0px auto;
+    max-width: 988px;
+    padding: 0;
+}
+
+.title-img {
+    height: 42px;
+    width: 179px;
+}
+
+.lang-div {
+    cursor: pointer;
+}
+
+.lang-btn {
+    color: rgba(175, 175, 175, 1);
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: .8px;
+    text-transform: uppercase;
+    align-items: center;
+    display: flex;
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.lang-img {
+    height: 14px;
+    margin-left: 8px;
+    width: 14px;
+}
+
+/* ### */
+
+.header-end {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 80px;
+    justify-content: end;
+    margin: 0 auto;
+    padding: 48px 0;
+    width: 988px;
+}
+
+.header-end-img {
+    margin-right: -50px;
+}
+
+.div-get-started {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.div-get-started h1 {
+    margin: 0;
+    width: 480px;
+    color: #4b4b4b;
+    font-size: 32px;
+}
+
+.start-ready {
+    font-size: 15px;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    max-width: 330px;
+    width: 100%;
+    
+}
+
+
+.a-started {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(88, 204, 2);
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0 2px 0;
+}
+
+.a-started span {
+    color: white;
+}
+
+.start-ready button {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    color: rgb(28, 176, 246);
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: 2px solid rgb(229, 229, 229);
+    bottom: -2px;
+}
+
+.a-started, .button-ready {
+    padding: 10px 0px;
+    border-radius: 12px;
+}
+
+/* ##### */
