--- a/styles/style.css
+++ b/styles/style.css
@@ -214,3 +214,89 @@ nav{
 }
 
 /* ###### */
+
+.main-div1 {
+    position: relative;
+}
+.main-div1-opacity {
+    opacity: 0;
+    background-color: rgb(221, 244, 255);
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    will-change: opacity;
+    z-index: -1;
+}
+
+.characteristics-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 96px 0;
+    justify-content: center;
+}
+
+.characteristics-section section {
+    margin: 0px 87.2px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 101px;
+}
+
+.characteristics-section h2 {
+    font-weight: 700;
+    font-size: 48px;
+    max-width: 503px;
+    color: rgb(88, 204, 2);
+    font-family: feather, sans-serif;
+    line-height: normal;
+    margin: 0;
+}
+.characteristics-section p {
+    max-width: 473px;
+}
+.characteristics-section a {
+    color: rgb(28, 176, 246);
+    font-weight: 700;
+}
+
+.characteristics-div {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    gap: 24px;
+}
+
+.power-section {
+    background-color: rgb(16, 14, 62);
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 185px 0;
+    width: 100%;
+}
+
+.power-text-div {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    /* width: 100%; */
+}
+
+.power-text-div button {
+    border-radius: 15px;
+    border: 2px solid rgb(229, 229, 229);
+    bottom: -2px;
+    padding: 10px 20px;
+    color: rgb(16, 14, 62);
+}
+
+/* ### */
